[package]
name = "simple-process-stats"
version = "0.1.0"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.8.0"
libc = "0.2.72"
tokio = { version = "0.2.21", features = ["fs"] }
